src/objects/smagicinteract__forward_config__c.object
<CustomObject>
    <customHelpPage>smagicinteract__SMSMagicHelp</customHelpPage>
    <fields>
        <fullName>smagicinteract__Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__forwardToEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forward Email To User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__forwardToMobilePhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forward SMS To User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__forwardToUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>forward_configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__methodName__c</fullName>
        <label>Method Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email Alert</fullName>
                </value>
                <value>
                    <fullName>Mobile Forwarding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SMS Alert</label>
    <listViews>
        <fullName>smagicinteract__SMS_Alerts</fullName>
        <columns>smagicinteract__forwardToUser__c</columns>
        <columns>smagicinteract__Keyword__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>smagicinteract__forwardToEmail__c</columns>
        <columns>smagicinteract__forwardToMobilePhone__c</columns>
        <filterScope>Everything</filterScope>
        <label>SMS Alerts</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Forward Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forward_Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>